--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,4 +6,4 @@
 <br>
 
 <button>Download Brochure</button>
-<button>View Online</button>
+<a href="http://localhost:4200/daviddake/src/assets/pdf/SINGLES-BROCHURE.pdf"><button>View Online</button></a>
