I created View Online

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,4 +6,5 @@
 <br>
 
 <button>Download Brochure</button>
-<a href="http://localhost:4200/daviddake/src/assets/pdf/SINGLES-BROCHURE.pdf"><button>View Online</button></a>
+<!-- <a href="http://localhost:4200/daviddake/src/assets/pdf/SINGLES-BROCHURE.pdf"><button>View Online</button></a> -->
+<a href="http://localhost:4200/assets/pdf/SINGLES-BROCHURE.pdf"><button>View Online</button></a>
