I created dowload brochure

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,8 @@
 <br>
 <br>
 
-<button>Download Brochure</button>
+<!-- <button>Download Brochure</button> -->
+<a href="http://localhost:4200/assets/pdf/SINGLES-BROCHURE.pdf" download><button>Download Brochure</button></a>
+
 <!-- <a href="http://localhost:4200/daviddake/src/assets/pdf/SINGLES-BROCHURE.pdf"><button>View Online</button></a> -->
 <a href="http://localhost:4200/assets/pdf/SINGLES-BROCHURE.pdf"><button>View Online</button></a>
