--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,14 @@
 
 
 <h1>LANDING PAGE</h1>
+<br>
+<div>
+    <img src="/assets/images/invitation.jpeg">
+</div>
 
 <br>
 <br>
 
-<!-- <button>Download Brochure</button> -->
-<a href="http://localhost:4200/assets/pdf/SINGLES-BROCHURE.pdf" download><button>Download Brochure</button></a>
+<a href="/assets/pdf/SINGLES-BROCHURE.pdf" download><button>Download Brochure</button></a>
 
-<!-- <a href="http://localhost:4200/daviddake/src/assets/pdf/SINGLES-BROCHURE.pdf"><button>View Online</button></a> -->
-<a href="http://localhost:4200/assets/pdf/SINGLES-BROCHURE.pdf"><button>View Online</button></a>
+<a href="/assets/pdf/SINGLES-BROCHURE.pdf"><button>View Online</button></a>
